--- a/src/style/stylesheets/_rStats.scss
+++ b/src/style/stylesheets/_rStats.scss
@@ -1,5 +1,5 @@
 .rs-base {
-  background-color: #EF2D5E;
+  background-color: $color-aframe-1;
   border-radius: 0;
   font: 10px monospace;
   left: 5px;
@@ -11,19 +11,19 @@
   top: 5px;
   width: 300px;
   z-index: 10000;
-}
-
-.rs-base div.hidden {
-  display: none;
-}
-
-.rs-base h1 {
-  color: #fff;
-  cursor: pointer;
-  font-size: 1.4em;
-  font-weight: 300;
-  margin: 0 0 5px;
-  padding: 0;
+  
+  div.hidden {
+    display: none;
+  }
+  
+  h1 {
+    color: $color-white;
+    cursor: pointer;
+    font-size: 1.4em;
+    font-weight: 300;
+    margin: 0 0 5px;
+    padding: 0;
+  }
 }
 
 .rs-group {
@@ -33,10 +33,10 @@
   -webkit-flex-direction: column-reverse;
   flex-direction: column-reverse;
   margin-bottom: 5px;
-}
-
-.rs-group:last-child {
-  margin-bottom: 0;
+  
+  &:last-child {
+    margin-bottom: 0;
+  }
 }
 
 .rs-counter-base {
